--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Func测试/FuncTestVC.xib
@@ -180,7 +180,7 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="frV-13-JUL">
-                    <rect key="frame" x="8" y="209" width="391" height="44"/>
+                    <rect key="frame" x="8" y="209" width="403" height="44"/>
                     <subviews>
                         <button opaque="NO" tag="28" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hCI-KF-va0">
                             <rect key="frame" x="0.0" y="7" width="62" height="30"/>
@@ -224,10 +224,10 @@
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="8X6-f0-LdT"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="27" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0w-fH-vTa">
-                            <rect key="frame" x="329" y="7" width="62" height="30"/>
+                        <button opaque="NO" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0w-fH-vTa">
+                            <rect key="frame" x="329" y="7" width="74" height="30"/>
                             <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="数组测试"/>
+                            <state key="normal" title="Range测试"/>
                             <connections>
                                 <action selector="handleClick:" destination="-1" eventType="touchUpInside" id="dPa-JV-Y9v"/>
                             </connections>
